# tc-server

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  PROTOCOL_COMPATIBILITY.md  README.md  ROADMAP.md
examples/: http_rpc_host.rs  http_rpc_native_host.rs  http_rpc_opref_get.rs  http_wasm_opref_get.rs  library_schema_example.json  pyo3_http_rpc_demo.py  rjwt_install_token.rs
scripts/: install_python_dev.sh
src/: auth.rs  egress.rs  gateway.rs  http.rs  http_client.rs  ir.rs  kernel.rs  lib.rs  library.rs  main.rs  op_executor.rs  op_plan.rs  outbound_http.rs  pyo3_runtime.rs  reflect.rs  replication.rs  resolve.rs  state.rs  storage.rs  test_utils.rs  txn.rs  txn_server.rs  uri.rs  wasm.rs
src/http/: codec.rs  config.rs  host.rs  native.rs  parse.rs  response.rs  server.rs  tests.rs
src/kernel/: builder.rs  dispatch.rs  kernel.rs  mod.rs  resolver.rs  tests.rs  types.rs
src/op_executor/: broadcast_reduce.rs  execute.rs  executor.rs  mod.rs  reflect.rs  resolve.rs  tensor_add.rs  tensor_dtype.rs  tensor_matmul.rs  tensor_transpose.rs  tests.rs
src/pyo3_runtime/: conversions.rs  kernel.rs  state.rs  state_handle_conversions.rs  tests.rs  types.rs  wire.rs
src/replication/: client.rs  crypto.rs  gateway.rs  handler.rs  http_util.rs  issuer.rs  membership.rs  mod.rs  peers.rs  tests.rs
src/txn/: gateway.rs  handle.rs  manager.rs  mod.rs  tests.rs  token.rs  wire.rs
src/wasm/: decode.rs  http.rs  library.rs  manifest.rs  mod.rs  tests.rs
tests/: library_install_security.rs  live_replication_membership.rs  psk_rotation.rs
tests/support/: mod.rs
