[package]
name = "tinychain"
version = "0.1.0"
edition = "2024"

[lib]
name = "tinychain"

[dependencies]
bytes = "1"
futures = "0.3"
pathlink = "0.4"
tc-ir = { path = "../tc-ir" }
tc-error = { path = "../tc-error" }
tc-value = { path = "../tc-value" }
tc-state = { path = "../tc-state" }
umask = "2.1"
parking_lot = "0.12"
url = "2"
destream = "0.10"
async-trait = "0.1"
wasmtime = { version = "15", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
rjwt = { version = "0.6", optional = true }

[dependencies.destream_json]
version = "0.15"
default-features = false
optional = true

[dependencies.pyo3]
version = "0.21"
features = ["macros"]
optional = true

[dependencies.http]
version = "0.2"
optional = true

[dependencies.hyper]
version = "0.14"
features = ["full"]
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "sync"]
optional = true

[dependencies.tower]
version = "0.4"
features = ["make"]
optional = true

[features]
default = ["http-server", "wasm"]
# Outbound HTTP client support (for proxying requests to remote hosts).
http-client = ["dep:http", "dep:hyper", "dep:tokio", "dep:destream_json"]
# Inbound HTTP server support (Hyper server + tower make_service wiring).
http-server = ["http-client", "dep:tower"]
pyo3 = ["http-client", "dep:pyo3", "dep:destream_json", "tc-ir/pyo3-conversions"]
pyo3-extension = ["pyo3", "pyo3/extension-module"]
wasm = ["dep:wasmtime"]
rjwt-token = ["dep:rjwt", "pathlink/serialize", "tc-value/serialize"]

[dev-dependencies]
serde_json = "1"
wat = "1"
wasm-encoder = "0.206"
tc-wasm = { path = "../tc-wasm" }
