[package]
name = "tinychain"
version = "0.1.0"
edition = "2024"

[lib]
name = "tinychain"

[dependencies]
bytes = "1"
futures = "0.3"
pathlink = { version = "0.4", features = ["serialize"] }
tc-ir = { path = "../tc-ir" }
tc-error = "0.13"
tc-value = { path = "../tc-value", features = ["serialize"] }
tc-state = { path = "../tc-state" }
umask = "2.1"
parking_lot = "0.12"
url = "2"
destream = "0.10"
async-trait = "0.1"
wasmtime = { version = "15", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
getrandom = "0.2"
sha2 = "0.10"
rjwt = { version = "0.6" }
freqfs = "0.12.0"
mdns-sd = { version = "0.11", optional = true }
clap = { version = "4.5", features = ["derive", "env"] }
aes-gcm-siv = "0.11"
hex = "0.4"
safecast = "0.2"
number-general = "0.14"

[dependencies.destream_json]
version = "0.15"
default-features = false
optional = true

[dependencies.pyo3]
version = "0.21"
features = ["macros"]
optional = true

[dependencies.http]
version = "0.2"
optional = true

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"]

[dependencies.tower]
version = "0.4"
features = ["make"]
optional = true

[features]
default = ["http-server", "wasm"]
# Outbound HTTP client support (for proxying requests to remote hosts).
http-client = ["dep:http"]
# Inbound HTTP server support (Hyper server + tower make_service wiring).
http-server = ["http-client", "dep:tower", "dep:destream_json"]
pyo3 = ["http-server", "dep:pyo3", "dep:destream_json", "tc-ir/pyo3-conversions"]
pyo3-extension = ["pyo3", "pyo3/extension-module"]
wasm = ["dep:wasmtime"]
mdns = ["dep:mdns-sd"]
k8s = []

[dev-dependencies]
serde_json = "1"
wasm-encoder = "0.206"
tc-wasm = { path = "../tc-wasm" }

[[example]]
name = "http_rpc_native_host"
required-features = ["http-server"]

[[example]]
name = "rjwt_install_token"

[[bin]]
name = "tc-server"
path = "src/main.rs"
